# infra-rs

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Jenkinsfile  LICENSE  README.md  Readme.md  build.rs  build_output.txt  build_output_x86.txt  clippy.toml  devenv.nix  devenv.yaml  flake.nix  justfile  lu.mbtiles  mise.toml  pixi.toml
crates/cogtilereader/: Cargo.toml
crates/cogtilereader/src/: cog.rs  io.rs  lib.rs  readers.rs  stats.rs  testutils.rs  utils.rs
crates/geo/: Cargo.toml  README.md  build.rs
crates/geo/benches/: rasterops.rs  simd.rs
crates/geo/simd_macro/: Cargo.toml
crates/geo/simd_macro/src/: lib.rs
crates/geo/src/: anydensearray.rs  anydensearray_macros.rs  anydensearrayalgo.rs  anydensearrayops.rs  array.rs  arraydatatype.rs  arraynum.rs  arrayops.rs  arraytests.rs  bandindex.rs  cell.rs  cog.rs  constants.rs  coordinate.rs  coordinatetransformer.rs  crs.rs  datatype.rs  densearray.rs  densearrayio.rs  densearrayiterators.rs  densearrayops.rs  densearrayutil.rs  error.rs  gdalinterop.rs  georaster.rs  georeference.rs  geotiff.rs  geotransform.rs  latlonbounds.rs  lib.rs  metadata.rs  nodata.rs  point.rs  raster.rs  rasteriotests.rs  rastermetadata.rs  rasternum.rs  rasterscale.rs  rastersize.rs  rect.rs  (+7 more)
crates/geo/src/cog/: creation.rs  debug.rs  decoder.rs  gdalghostdata.rs  io.rs  reader.rs  stats.rs  tileio.rs  utils.rs  webtiles.rs
crates/geo/src/coordinatetransformer/: proj.rs  proj4rs.rs
crates/geo/src/georaster/: algo.rs  cell.rs  densegeoraster.rs  densegeorasterops.rs  denserasterconversions.rs  denserasterio.rs  denserasterops.rs  io.rs  nodata.rs  rasteriotests.rs  rastertests.rs  testutils.rs
crates/geo/src/georaster/algo/: cast.rs  polygonize.rs  rasterdiff.rs
crates/geo/src/georaster/arrow/: arrowraster.rs  (+2 more)
crates/geo/src/geotiff/: decoder.rs  gdalghostdata.rs  gdalmetadata.rs  io.rs  metadata.rs  projectioninfo.rs  reader.rs  tileio.rs  utils.rs  writer.rs
crates/geo/src/raster/: algo.rs  cell.rs  denseraster.rs  denserasterconversions.rs  denserasterio.rs  denserasterops.rs  formats.rs  intersection.rs  io.rs  nodata.rs  rasteriotests.rs  rasternum.rs  rastersize.rs  rastertests.rs  reader.rs  testutils.rs  utils.rs
crates/geo/src/srs/: gdal.rs  proj.rs  proj4rs.rs
crates/geo/src/vector/: algo.rs  coveragetools.rs  dataframe.rs  datarow.rs  fieldtype.rs  gdalio.rs  geometrytype.rs  io.rs  polygoncoverage.rs  readers.rs
crates/geo/test/data/: landusebyte_3857.tif
crates/geo/tests/: integration_test.rs  reproject_warp_integration_test.rs
crates/geo/tests/data/: clusteridwithobstacles_categories.tif  clusteridwithobstacles_obstacles.tif  data_types.csv  data_types.xlsx  data_types_header_offset.xlsx  data_types_no_header.csv  data_types_no_header.xlsx  empty_sheet.csv  empty_sheet.xlsx
crates/geo/vector_derive/: Cargo.toml
crates/geo/vector_derive/src/: lib.rs
crates/inf/: Cargo.toml
crates/inf/benches/: colormapping.rs
crates/inf/src/: allocate.rs  cast.rs  cell.rs  color.rs  colormap.rs  colormapper.rs  coordinatetransformer.rs  crs.rs  duration.rs  error.rs  fs.rs  gdalinterop.rs  geometadata.rs  interpolate.rs  legend.rs  lib.rs  progressinfo.rs  raster.rs  rasterio.rs  rasteriotests.rs  rastertests.rs  rect.rs  simd.rs  spatialreference.rs  sqliteconnection.rs
crates/inf/src/colormapper/: banded.rs  catgegoric.rs  linear.rs
crates/inf/test/data/: epsg31370.tif
crates/lerc-decoder/: Cargo.toml  PERFORMANCE.md  README.md
crates/lerc-decoder/examples/: decode.rs
crates/lerc-decoder/src/: bit_mask.rs  bit_stuffer.rs  error.rs  fpl.rs  huffman.rs  lerc2.rs  lib.rs  rle.rs
crates/lerc-decoder/tests/: comparison_tests.rs  integration_tests.rs  performance_tests.rs  roundtrip_tests.rs
crates/raster/: Cargo.toml  Readme.md
crates/raster-tile/: Cargo.toml
crates/raster-tile/src/: imageprocessing.rs  lib.rs  lz4.rs  rastertile.rs  tileheader.rs  utils.rs
crates/raster/benches/: rasterops.rs
crates/raster/src/: algo.rs  anydenseraster.rs  anydenserasterops.rs  cell.rs  datatype.rs  denseraster.rs  denserasterio.rs  denserasterops.rs  io.rs  lib.rs  raster.rs  rasteriotests.rs  rasternum.rs  rastertests.rs  testutils.rs
crates/raster/src/arrow/: arrowraster.rs  arrowrasterio.rs  arrowrasterops.rs
crates/raster/src/python/: pyraster.rs
crates/raster/src/ruster/: Cargo.toml
crates/tiler/: Cargo.toml
crates/tiler/src/: cogtileprovider.rs  difftileprovider.rs  directorytileprovider.rs  dynamictileprovider.rs  imageprocessing.rs  layermetadata.rs  lib.rs  mbtilestileprovider.rs  pixelformat.rs  rasterprocessing.rs  tiledata.rs  tilediff.rs  tileformat.rs  tileio.rs  tileprovider.rs  tileproviderfactory.rs  warpingtileprovider.rs
crates/tiler/test/data/: gem_limburg.mbtiles  landusebyte.tif  potgeo_lim_bebouwd.tif  residentieel_dakopp_50m_lim.tif  residentieel_dakopp_50m_lim_mod.tif  winddata.nc
crates/vector/: Cargo.toml
crates/vector/src/: algo.rs  coveragetools.rs  datarow.rs  fieldtype.rs  io.rs  lib.rs  polygoncoverage.rs
crates/vector/test/data/: boundaries.gpkg  road.csv
crates/vector/tests/: integration_test.rs
crates/vector/vector_derive/src/: lib.rs
crates/vito-tile-format/: Cargo.toml
crates/vito-tile-format/src/: datatype.rs  lib.rs  lz4.rs  rastertile.rs  tileheader.rs
pypi/: pyproject.toml
ruster/: Cargo.toml
ruster/src/: lib.rs  raster.rs  rasterio.rs
tools/cog-analyzer/: Cargo.toml
tools/cog-analyzer/src/: app.rs  data.rs  event.rs  handler.rs  lib.rs  main.rs  ui.rs
tools/cog-analyzer/src/tabs/: chunks.rs  mod.rs  overview.rs  webtiles.rs
tools/createcog/: Cargo.toml  README.md
tools/createcog/src/: createtiles.rs  main.rs
tools/creatembtiles/: Cargo.toml
tools/creatembtiles/src/: createtiles.rs  main.rs  mbtiles-schema.sql  mbtilesdb.rs  mbtilesmetadata.rs
tools/tiles2raster/: Cargo.toml
tools/tiles2raster/src/: main.rs
tools/tileserver/: Cargo.toml
tools/tileserver/src/: apperror.rs  difftileapihandler.rs  lib.rs  main.rs  tileapihandler.rs  tui.rs
tools/tileserver/src/tui/: app.rs  event.rs  handler.rs  ui.rs
(+127 files in other folders)
