[package]
name = "infra-rs"
edition = "2024"

[package.metadata.vcpkg]
dependencies = [
    "proj[core,embed-data]",
    "gdal[core,netcdf,zstd,expat]",
    "hdf5[core,zlib]",
    "netcdf-c[core,netcdf-4,hdf5]",
    "tiff[core,lzma,zstd]",
] # needed to run the geo tests
git = "https://github.com/microsoft/vcpkg"
overlay-triplets-path = "vcpkg-overlay/triplets"
rev = "ce613c4"

[package.metadata.vcpkg.target]
# aarch64-apple-darwin = { triplet = "arm64-osx-debugsymbols" }
# x86_64-pc-windows-msvc = { triplet = "x64-windows-static-debugsymbols" }
x86_64-unknown-linux-gnu = { triplet = "x64-linux-release" }
aarch64-apple-darwin = { triplet = "arm64-osx-release" }
x86_64-apple-darwin = { triplet = "x64-osx-release" }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release" }

[workspace]
package.name = "infra-rs"
package.version = "2025.10.23"
package.edition = "2024"
members = [
    "crates/geo",
    "crates/geo/vector_derive",
    "crates/inf",
    "crates/raster-tile",
    "crates/sqlite",
    "crates/tiler",
    "tools/creatembtiles",
    "tools/createcog",
    "tools/tiles2raster",
    "tools/tileserver",
]

default-members = [
    "crates/geo",
    "crates/geo/vector_derive",
    "crates/inf",
    "crates/raster-tile",
    "crates/sqlite",
    "crates/tiler",
]

[dependencies]
geo = { path = "./crates/geo" }
inf = { path = "./crates/inf" }
pyo3 = { version = "*", optional = true }
sqlite = { optional = true, path = "./crates/sqlite" }
tiler = { optional = true, path = "./crates/tiler" }
tileserver = { optional = true, path = "./tools/tileserver" }

[features]
arrow = ["geo/arrow"]
default = ["gdal-static", "serde", "sqlite"]
gdal = ["geo/gdal"]
gdal-static = ["gdal", "geo/gdal-static"]
vector = ["geo/vector-io", "geo/vector-io-xlsx", "geo/vector-io-csv"]
python = ["pyo3/auto-initialize"]
serde = ["inf/serde"]
sqlite = ["dep:sqlite"]
tiler = ["dep:tiler"]
simd = ["geo/simd"]
tui = ["tileserver/tui"]

[patch.crates-io]
# more recent geozero to avoid multiple gdal copies
geozero = { git = "https://github.com/georust/geozero.git", rev = "e52422b54ab469ce8de6e33f859d4321be63d657" }
crs-definitions = { git = "https://github.com/dirkvdb/crs-definitions.git", rev = "9d01fb7993537a3ba632bf60899b884434a1d453" }
proj4wkt = { git = "https://github.com/3liz/proj4wkt-rs.git", rev = "942030821e6c0201d1ff899bcfc981799566b324" }
# https://github.com/image-rs/image-tiff/issues/253
tiff = { git = "https://github.com/dirkvdb/image-tiff.git", rev = "47811747dda727073d6d48be918ce5831e124174" }
gdal = { git = "https://github.com/georust/gdal.git", rev = "2c76f92489e7ac868f776b6c7224ce05efdbefaf" }
gdal-sys = { git = "https://github.com/georust/gdal.git", rev = "2c76f92489e7ac868f776b6c7224ce05efdbefaf" }

# [profile.dev]
# debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

# [profile.debugging]
# inherits = "dev"
# debug = true

[profile.samply]
inherits = "release"
debug = true
