[package]
name = "cogtilereader"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = { default-features = false, path = "../geo" }
inf = { path = "../inf" }
itertools = "0.14"
log = "0.4"
simd_macro = { path = "../geo/simd_macro" }
thiserror = "2.0"
tiff = { version = "0.10", default-features = false }
weezl = "0.1"
xml-rs = { version = "0.8", optional = true }

[dev-dependencies]
approx = "0.5"
path_macro = "1.0"
tempfile = "3"
test-log = "0.2"

[features]
default = ["raster_stats"]
gdal = ["geo/gdal-static"]  # Needed for running the tests
raster_stats = ["dep:xml-rs"]
simd = ["geo/simd", "inf/simd"]
