[package]
name = "geo"
version = "0.1.0"
edition = "2024"

# PROJECTION FEATURES:
# - proj4rs: Pure Rust projection library (default, lightweight)
# - proj: PROJ library binding (more comprehensive, requires system dependencies)
# When 'proj' feature is enabled, it takes precedence over 'proj4rs'.

[package.metadata.vcpkg]
dependencies = [
  "gdal[core,geos,sqlite3]",
  "proj[core,embed-data]",
  "tiff[core,lzma,zip]",
]

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = [
  "gdal[core,geos,iconv,sqlite3]",
  "proj[core,embed-data]",
  "tiff[core,lzma,zip]",
] }

[[bench]]
harness = false
name = "rasterops"

[[bench]]
harness = false
name = "simd"

[dependencies]
approx = "0.5"
proj4rs = { version = "0.1", features = [
  "geo-types",
  "crs-definitions",
], optional = true }
proj4wkt = { version = "0.1", optional = true }
crs-definitions = { version = "0.3.1", optional = true }
proj = { version = "0.30.0", optional = true }
arrow = { version = "56", optional = true }
bon = { version = "3.7", optional = true }
bytemuck = { version = "1.23" }
cfg-if = "1.0"
gdal = { version = "0.18", optional = true }
gdal-sys = { version = "0.11", optional = true }
geo-types = { version = "0.7", features = ["approx"] }
geos = { version = "10.0", features = ["geo", "v3_11_0"], optional = true }
geozero = { version = "0.14" }
inf = { path = "../inf" }
itertools = "0.14"
log = "0.4"
num = "0.4"
pyo3 = { version = "0.25", optional = true }
rayon = { version = "1.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
simd_macro = { path = "simd_macro" }
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
thiserror = "2.0"
vector_derive = { optional = true, path = "vector_derive" }
tiff = { version = "0.10", default-features = false, optional = true }
weezl = { version = "0.1", optional = true }
ruzstd = { version = "0.8", optional = true }
xml-rs = { version = "0.8", optional = true }

[dev-dependencies]
ctor = "0.5"
env_logger = "0.11"
generic-tests = "0.1"
path_macro = "1.0"
rand = "0.9"
tempfile = "3"
test-log = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0" }
tsify = { version = "*", default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde"] }

[features]
default = ["derive", "gdal", "cog", "proj4rs"]
arrow = ["dep:arrow"]
derive = ["dep:vector_derive"]
proj = ["dep:proj"]
proj4rs = ["dep:proj4rs", "dep:proj4wkt", "dep:crs-definitions"]
gdal = ["proj", "dep:gdal", "dep:gdal-sys", "dep:bon", "geozero/with-gdal"]
cog = ["dep:weezl", "dep:tiff", "dep:xml-rs", "dep:ruzstd"]
gdal-static = ["gdal"]
python = ["arrow", "arrow/pyarrow", "dep:pyo3"]
serde = ["dep:serde"]
simd = ["inf/simd", "simd_macro/simd"]
specta = ["dep:specta"]
vector = ["dep:geos", "dep:rayon", "geozero/with-geos"]
