[package]
name = "inf"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "colormapping"

[dependencies]
approx = "0.5"
log = "0.4"
num = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
ctor = "0.4"
env_logger = "0.11"
generic-tests = "0.1"
test-log = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde"] }
tsify = { version = "*", default-features = false, features = ["js"] }
serde = { version = "1.0" }

[features]
default = []
serde = ["dep:serde"]
simd = []
specta = ["dep:specta"]
