[package]
name = "inf"
version.workspace = true # inherit from [workspace.package]
edition.workspace = true

[[bench]]
harness = false
name = "colormapping"

[dependencies]
approx = "0.5"
bytemuck = { version = "1.24", features = ["extern_crate_alloc", "derive"] }
log = "0.4"
num = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
ctor = "0.6"
env_logger = "0.11"
generic-tests = "0.1"
test-log = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde"] }
tsify = { version = "*", default-features = false, features = ["js"] }
serde = { version = "1.0" }

[features]
default = []
serde = ["dep:serde"]
simd = []
specta = ["dep:specta"]
