[package]
name    = "raster-tile"
version = "0.1.0"
edition = "2024"

[dependencies]
geo       = { path = "../geo" }
inf       = { path = "../inf" }
thiserror = "2.0"
lz4_flex  = "0.11"
png       = { version = "0.17", optional = true }
num       = { version = "0.4", optional = true }

[dev-dependencies]
path_macro = "1.0"
tokio      = { version = "1", features = ["full"] }

[features]
float_png = ["dep:num", "dep:png"]
gdal      = ["geo/gdal-static"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"
