[package]
edition = "2024"
name    = "raster-tile"
version = "0.1.0"

[dependencies]
futures    = "0.3"
geo        = { path = "../geo" }
inf        = { path = "../inf" }
lz4_flex   = "0.11"
num        = { version = "0.4", optional = true }
png        = { version = "0.17", optional = true }
simd_macro = { path = "../geo/simd_macro" }
thiserror  = "2.0"

[dev-dependencies]
path_macro = "1.0"
tokio      = { version = "1", features = ["full"] }

[features]
float_png = ["dep:num", "dep:png"]
gdal      = ["geo/gdal-static"]
simd      = ["geo/simd"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys       = "0.3"
wasm-bindgen = "0.2"
