[package]
name = "raster-tile"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3"
geo = { default-features = false, path = "../geo" }
inf = { path = "../inf" }
lz4_flex = { version = "0.12", optional = true }
num = { version = "0.4", optional = true }
png = { version = "0.18", optional = true }
simd_macro = { path = "../geo/simd_macro" }
thiserror = "2.0"

[dev-dependencies]
path_macro = "1.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[features]
default = ["lz4"]
float_png = ["dep:num", "dep:png"]
gdal = ["geo/gdal-static"]
lz4 = ["dep:lz4_flex"]
simd = ["geo/simd"]
