[package]
name        = "raster"
version     = "0.1.0"
edition     = "2021"
description = "Nodata aware raster operations without any of the geospatial dependencies"

[dependencies]
num       = "0.4"
thiserror = "2.0"
serde     = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
approx        = "0.5"
generic-tests = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name    = "rasterops"
harness = false

[features]
serde = ["dep:serde"]
