[package]
name    = "tiler"
version = "0.1.0"
edition = "2021"

[dependencies]
inf        = { path = "../inf", features = ["gdal"] }
raster     = { path = "../raster" }
sqlite     = { path = "../sqlite" }
thiserror  = "1.0"
gdal       = "0.17"
log        = "0.4"
num        = "0.4"
png        = "0.17"
serde_json = { version = "1.0", optional = true }
serde      = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx   = "0.5"
test-log = "0.2"
image    = { version = "0.25", default-features = false, features = ["png"] }
ctor     = "0.2"

[features]
serde = ["dep:serde", "dep:serde_json", "inf/serde"]
