[package]
name    = "tiler"
version = "0.1.0"
edition = "2024"

[dependencies]
inf         = { path = "../inf", features = ["serde"] }
raster-tile = { path = "../raster-tile" }
geo         = { path = "../geo", features = ["gdal", "serde"] }
geozero     = { version = "0.14", optional = true }
geo-types   = "0.7"
sqlite      = { path = "../sqlite" }
thiserror   = "2.0"
gdal        = "0.17"
log         = "0.4"
num         = "0.4"
png         = "0.17"
serde_json  = { version = "1.0", optional = true }
serde       = { version = "1.0", features = ["derive"], optional = true }
specta      = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
mvt         = { version = "0.9", optional = true }

[dev-dependencies]
approx     = "0.5"
test-log   = "0.2"
image      = { version = "0.25", default-features = false, features = ["png"] }
ctor       = "0.4"
path_macro = "1.0"

[features]
serde        = ["dep:serde", "dep:serde_json", "inf/serde"]
specta       = ["dep:specta", "geo/specta", "inf/specta"]
vector-tiles = ["dep:geozero", "dep:mvt", "geo/vector"]
slow_tests   = []
