[package]
name = "tiler"
version = "0.1.0"
edition = "2024"

[dependencies]
gdal = "0.18"
geo = { features = ["gdal", "serde", "raster-io-geotiff"], path = "../geo" }
geo-types = "0.7"
geozero = { version = "0.14", optional = true }
inf = { features = ["serde"], path = "../inf" }
log = "0.4"
mvt = { version = "0.10", optional = true }
num = "0.4"
png = "0.18"
raster-tile = { path = "../raster-tile" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
sqlite = { path = "../sqlite" }
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
ctor = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
path_macro = "1.0"
test-log = "0.2"
tempfile = "3"

[features]
serde = ["dep:serde", "dep:serde_json", "inf/serde"]
slow_tests = []
simd = ["inf/simd", "geo/simd"]
specta = ["dep:specta", "geo/specta", "inf/specta"]
vector-tiles = ["dep:geozero", "dep:mvt", "geo/vector-processing"]

[package.metadata.vcpkg]
dependencies = [
  "hdf5[core,threadsafe]"
]
