[package]
name    = "vector"
version = "0.1.0"
edition = "2021"

[dependencies]
inf           = { path = "../inf", features = ["gdal"] }
vector_derive = { path = "vector_derive", optional = true }

gdal     = "0.17"
gdal-sys = "0.10"
approx   = "0.5"

[dev-dependencies]
inf        = { path = "../inf", features = ["gdal-static"] }
path_macro = "1.0"

[features]
derive = ["dep:vector_derive"]

[package.metadata.vcpkg]
dependencies = ["gdal[core,iconv]"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
