[package]
name = "createcog"
version.workspace = true # inherit from [workspace.package]
edition.workspace = true

[package.metadata.vcpkg]
dependencies = ["gdal[core,netcdf]"]

[dependencies]
inf = { path = "../../crates/inf", features = [] }
geo = { path = "../../crates/geo", features = [
    "gdal-static",
    "raster-io-geotiff",
] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
anyhow = "1.0"
env_logger = { version = "0.11" }
thiserror = "2.0"
indicatif = "0.18"
indicatif-log-bridge = "0.2"

[features]
