[package]
name = "createcog"
version.workspace = true  # inherit from [workspace.package]
edition.workspace = true

[package.metadata.vcpkg]
dependencies = ["gdal[core,netcdf]"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
geo = { path = "../../crates/geo", features = [
  "gdal-static",
  "raster-io-geotiff",
] }
inf = { path = "../../crates/inf", features = [] }
kdam = { version = "0.6", features = ["rich"] }
log = "0.4"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"

[features]
