[package]
name = "tiles2raster"
version = "0.1.0"
edition = "2024"

[dependencies]
inf = { path = "../../crates/inf", features = [] }
geo = { path = "../../crates/geo", features = ["gdal-static"] }
raster-tile = { path = "../../crates/raster-tile", features = ["float_png"] }
sqlite = { path = "../../crates/sqlite", features = [] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
env_logger = { version = "0.11" }
rayon = "1.10"
thiserror = "2.0"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
reqwest = { version = "0.12" }
tokio = { version = "1", features = ["full"] }
comfy-table = { version = "7" }

[features]
