[package]
name    = "tileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
inf = { path = "../../crates/inf", features = ["serde"] }
geo = { path = "../../crates/geo", features = ["gdal-static", "serde"] }
tiler = { path = "../../crates/tiler", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
env_logger = { version = "0.11" }
rayon = "1.10"
tower = { version = "0.5" }
tokio = { version = "1.40", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2.0"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

ratatui    = { version = "0.29", features = ["crossterm"], optional = true }
crossterm  = { version = "0.29", features = ["event-stream"], optional = true }
futures    = { version = "0.3.30", optional = true }
tui-logger = { version = "0.17", optional = true }

[features]
tui         = ["dep:crossterm", "dep:futures", "dep:ratatui", "dep:tui-logger"]
vector-diff = ["tiler/vector-tiles"]

[package.metadata.vcpkg]
dependencies = ["gdal[core,netcdf]"]
