[package]
name = "tileserver"
version = "0.1.0"
edition = "2024"

[package.metadata.vcpkg]
dependencies = ["gdal[core,netcdf]"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
env_logger = { version = "0.11" }
futures = { version = "0.3", optional = true }
geo = { features = ["gdal-static", "serde"], path = "../../crates/geo" }
inf = { features = ["serde"], path = "../../crates/inf" }
log = "0.4"
ratatui = { version = "0.29", features = ["crossterm"], optional = true }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tiler = { features = ["serde"], path = "../../crates/tiler" }
tokio = { version = "1.46", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tui-logger = { version = "0.17", optional = true }

[features]
tui = ["dep:crossterm", "dep:futures", "dep:ratatui", "dep:tui-logger"]
vector-diff = ["tiler/vector-tiles"]
